fixed small size issues and nav getting covered by text content

--- a/css/style.css
+++ b/css/style.css
@@ -85,6 +85,7 @@ body > section > div.row > div > p:last-child {
 	width: 40px;
 	height: 120px;
 	margin-top: -60px;
+	z-index:2000;
 }
 
 
